--- a/frontend/src/components/admin/adminhome.css
+++ b/frontend/src/components/admin/adminhome.css
@@ -8,8 +8,8 @@
   z-index: -1;
   width: 100%;
   height: 100vh;
-  padding-top: 20%;
-  padding-right: 10px;
+  /* padding-top: 20%;
+  padding-right: 10px; */
   color: #fff;
   background-color: rgba(0, 0, 0, 0.3);
 }
