--- a/frontend/src/components/Userlogin.css
+++ b/frontend/src/components/Userlogin.css
@@ -10,15 +10,15 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(/public/signup.jpg); /* Update the image path */
+  background: url(https://images.unsplash.com/photo-1622667042273-e0e54442440a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80); /* Update the image path */
   background-size: cover;
   background-position: top;
-  filter: blur(8px);
+  filter: blur(3px);
   z-index: -1;
 }
 
 .login-container {
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -34,7 +34,12 @@
   max-width: 400px; /* Set a maximum width to prevent the form from becoming too wide */
   margin: auto; /* Center the form */
   backdrop-filter: blur(7px);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
+
 
 .google-login-wrapper {
   margin-top: 20px; 
@@ -61,11 +66,11 @@
   box-sizing: border-box;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   .login-form {
     width: 80%;
   }
-}
+} */
 
 
 .error-message {
@@ -73,3 +78,6 @@
   font-size: 14px;
   margin-top: 5px; 
 }
+
+
+
