--- a/frontend/src/components/admin/adminlogin.css
+++ b/frontend/src/components/admin/adminlogin.css
@@ -1,8 +1,8 @@
-* {
+ * {
   box-sizing: border-box;
 }
 body {
-  /* background: url(https://images.unsplash.com/photo-1622667042273-e0e54442440a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80); */
+  
   background: url(https://images.unsplash.com/photo-1580650487485-7f3a88a39499?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGNoZWZmcyUyMGNvb2t8ZW58MHx8MHx8fDA%3D);
   background-repeat: no-repeat;
   background-position: center;
@@ -29,7 +29,7 @@ body {
   border-radius: 5px;
   background: #fff;
 }
-/* 
+
 input {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -62,4 +62,9 @@ p {
 span{
   color: rgb(0, 95, 236);
   cursor: pointer;
-} */
+} 
+
+
+
+
+
